--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ body{
     box-shadow: inset 0 1px 10px 0px #f1a252;
 }
 
+/*물병 위아래 이동*/
+.water-item.active{
+    transform: translateY(-50px);
+}
+
 /*물병 위치 css*/
 .dc-main {
     display: flex;
@@ -84,12 +89,21 @@ body{
     transition: transform .5s;
 }
 
-/* .bar {
+
+/*물병내 물이 적어질 경우*/
+.wi-color{
+
+    transition: transform .4s, height 1.4s;
+    position: relative;
+    z-index: 1;
+}
+
+.bar {
     width: 3px;
     position: absolute;
     height: 180px;
     background-color: #fff;   
-} */
+}
 
 
 
